--- a/.github/workflows/slack-test-workflow.yaml
+++ b/.github/workflows/slack-test-workflow.yaml
@@ -54,5 +54,5 @@ jobs:
         with:
           webhook: ${{ secrets.slack_webhook }}
           webhook-type: incoming-webhook
-          payload-file-path: ../templates/apply-template.json
+          payload-file-path: ./.github/templates/apply-template.json
           payload-templated: true
