--- a/.github/workflows/slack-test-workflow.yaml
+++ b/.github/workflows/slack-test-workflow.yaml
@@ -54,4 +54,5 @@ jobs:
         with:
           webhook: ${{ secrets.slack_webhook }}
           webhook-type: incoming-webhook
+          payload-templated: true
           payload-file-path: ./.github/templates/apply-template.json
