--- a/.github/workflows/slack-test-workflow.yaml
+++ b/.github/workflows/slack-test-workflow.yaml
@@ -56,3 +56,62 @@ jobs:
           webhook-type: incoming-webhook
           payload-templated: true
           payload-file-path: ./.github/templates/apply-template.json
+
+          
+      - name: "Notify Failure"
+        id: notify_failure_yaml
+        if: failure()
+        uses: slackapi/slack-github-action@v2.0.0
+        with:
+          webhook: ${{ secrets.slack_webhook }}
+          webhook-type: incoming-webhook
+          payload: |
+            attachments:
+              - color: '#f2c744'
+                blocks:
+                  - type: header
+                    text:
+                      type: plain_text
+                      text: ':rotating_light: Terragrunt Apply has failed for ${{ inputs.environment }} with yaml'
+                      emoji: true
+                  - type: section
+                    text:
+                      type: plain_text
+                      emoji: true
+                      text: An error has occurred when trying to run terragrunt apply for PR.
+                  - type: divider
+                  - type: section
+                    text:
+                      type: mrkdwn
+                      text: "*<${{ github.event.pull_request.html_url }}|${{ github.event.pull_request.title }}>* \n${{ toJson(github.event.pull_request.body) }}"
+                    accessory:
+                      type: image
+                      image_url: ${{ github.event.pull_request.user.avatar_url }}
+                      alt_text: actor image
+                  - type: section
+                    fields:
+                      - type: mrkdwn
+                        text: |-
+                          *Branch*
+                          ${{ github.event.pull_request.head.ref }}
+                      - type: mrkdwn
+                        text: |-
+                          *Author*
+                          ${{ github.event.pull_request.user.login }}
+                  - type: context
+                    elements:
+                      - type: mrkdwn
+                        text: <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} |${{ github.job }}>
+                  - type: divider
+                  - type: section
+                    text:
+                      type: mrkdwn
+                      text: '*Error message:*'
+                  - type: section
+                    text:
+                      type: mrkdwn
+                      text: '```${{ toJson(steps.slack_context.outputs.error) }}```'
+
+
+
+
