--- a/.github/workflows/slack-test-workflow.yaml
+++ b/.github/workflows/slack-test-workflow.yaml
@@ -117,8 +117,5 @@ jobs:
                   - type: section
                     text:
                       type: mrkdwn
-                      text: ```${{ toJson(env.APPLY_ERROR) }}```'
-
-
-
+                      text: ${{ toJson(env.APPLY_ERROR) }}
 
